--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -19,7 +19,7 @@
     <% end %>
     
     <div>
-      <%= form.label :cover, "Upload Cover", class: "custom-file-upload" %>
+      <%= form.label :cover, "Upload Cover",  style: "display: block"  %>
       <%= form.file_field :cover %>
     </div>
 
