--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -2,8 +2,44 @@
   <div>
     <h1>Editing board</h1>
   
-    <%= render partial: "boards/form", locals: {board: @board, pin_id: defined?(@pin_id) ? @pin_id : nil}  %>
-  
+    <%= render "shared/flash" %>
+    <%= form_with(model: [current_user, @board]) do |form| %>
+      <% if @board.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(@board.errors.count, "error") %> prohibited this board from being saved:</h2>
+
+          <ul>
+            <% @board.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      
+      <div>
+        <%= form.label :cover, "Upload Cover",  style: "display: block"  %>
+        <%= form.file_field :cover %>
+      </div>
+
+      <div>
+        <%= form.label :name, style: "display: block" %>
+        <%= form.text_field :name %>
+      </div>
+
+      <div>
+        <%= form.label :description, style: "display: block" %>
+        <%= form.text_area :description %>
+      </div>
+
+      <div>
+        <%= form.label :keep_secret, style: "display: block" %>
+        <%= form.check_box :keep_secret %>
+      </div>
+
+      <div>
+        <%= form.submit  %>
+      </div>
+    <% end %>
     <br>
   
     <div>
