--- a/app/views/boards/update.turbo_stream.erb
+++ b/app/views/boards/update.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.replace "#{dom_id(@board)}_privacy_change" do %>
-  <%= render partial: "boards/privacy_change", locals: { board: @board } %>
+<%= turbo_stream.update "board-infor-frame" do %>
+  <%= render partial: "boards/board_infor", locals: { board: @board } %>
 <% end %>
