--- a/app/views/likes/destroy.turbo_stream.erb
+++ b/app/views/likes/destroy.turbo_stream.erb
@@ -1,4 +1,6 @@
-<%= turbo_stream.update @like_frame_name do %>
-  <%= render partial: 'likes/like_icon', locals: {likeable: @likeable} %>
-  <%= render partial: 'likes/like_count', locals: {likeable: @likeable} %>
-<% end %>
+  <%= turbo_stream.update @like_frame_name do %>
+    <div class="one-line-container">
+      <%= render partial: 'likes/like_icon', locals: {likeable: @likeable} %>
+      <%= render partial: 'likes/like_count', locals: {likeable: @likeable} %>
+    </div>
+  <% end %>
