--- a/app/views/pins/_note.html.erb
+++ b/app/views/pins/_note.html.erb
@@ -1,5 +1,5 @@
 <div id="note_content">
-  <div><strong>Note to self:</strong></div>
+  <div class="m0_25"><strong>Note to self:</strong></div>
   
   <% if note.present? %>
     <div><%= note.content %></div>
