--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -1,14 +1,10 @@
 <div class="middle-container">
   <div>
     <div class="information">
-      <% if user.profile.avatar.present? %>
-        <%= link_to user_profile_path(user, user.profile) do %>
-          <div class="circular-image"><%= image_tag(user.resize_img(user.profile.avatar, 128, 500)) %></div>
-        <% end %>
-      <% else %>
-        <% text = user == current_user ? "About yourself" : "About user" %>
-        <div><%= link_to text, user_profile_path(user, user.profile) %></div>
+      <%= link_to user_profile_path(user, user.profile) do %>
+        <%= render partial: "shared/user_avatar", locals: {user: user, size: 128} %>
       <% end %>
+
       <%= render partial: "users/creator_info", locals: {user: user} %>
       <div class="follow-button">
         <% if current_user != user %>
