Add google_oauth2 for login with google

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -172,6 +172,11 @@ input, textarea {
 .box input, .box textarea {
   width: 90%;
 }
+input[type=image] {
+  width: auto;
+  padding: 0;
+  border: none;
+}
 input[type=checkbox] {
   width: auto;
 }
