--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,8 +1,3 @@
-<h1>New comment</h1>
-
 <%= turbo_frame_tag(@turbo_frame_id) do %>
-  <%= render "form", pin: @pin, comment: @comment %>
+  <%= render partial: "comments/form", locals: {pin: @pin, comment: @comment, cancel_form: @cancel_form} %>
 <% end %>
-
-<br>
-
