--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -77,7 +77,7 @@
       <p class="m1">
         <div class="comments-section">
           <%= turbo_frame_tag("#{dom_id(pin)}_comments") do %>
-            <div id="add-comment"><%= render partial: "comments/form", locals: {pin: pin, comment: pin.comments.build} %></div>
+            <div id="add-comment"><%= render partial: "comments/form", locals: {pin: pin, comment: pin.comments.build, not_show_cancel_button: true} %></div>
             <div class="bold m1">Comments</div>
             <%= turbo_frame_tag("#{dom_id(pin)}_show_all_comments") do %>
               <% if pin.comments.count == 0 %>
