--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,29 +1,37 @@
-<h1>Editing comment</h1>
-
-<%= turbo_frame_tag("#{dom_id(@comment)}_body") do %>
-  <%= form_with(model: [@pin, @comment]) do |form| %>
-    <% if @comment.errors.any? %>
-      <div style="color: red">
-        <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-        <ul>
-          <% @comment.errors.each do |error| %>
-            <li><%= error.full_message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div>
-      <%= form.text_area :body %>
-    </div>
-
-    <div>
-      <%= form.submit "Save" %>
+<% if @cancel_form %>
+  <%# render the original comment %>
+  <%= turbo_frame_tag("#{dom_id(@comment)}_body") do %>
+    <div class="align-items-center">
+      <%= link_to user_path(@comment.user), data: {turbo_frame: "_top"}, class: "align-items-center" do %>
+        <%= render partial: "shared/user_avatar", locals: {user: @comment.user, size: 32} %>
+        <strong><%= @comment.user.email.truncate(15) %></strong>
+      <% end %>
+      <%= @comment.body.strip %>
     </div>
   <% end %>
+<% else %>
+  <%= turbo_frame_tag("#{dom_id(@comment)}_body") do %>
+    <%= form_with(model: [@pin, @comment]) do |form| %>
+      <% if @comment.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+
+          <ul>
+            <% @comment.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div>
+        <%= form.text_area :body %>
+      </div>
+
+      <div>
+        <%= form.submit "Save" %>
+        <%= link_to 'Cancel', edit_pin_comment_path(@pin, @comment, cancel_form: true) %>
+      </div>
+    <% end %>
+  <% end %>
 <% end %>
-
-<br>
-
-
