--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,53 +1,63 @@
-<%= turbo_frame_tag "new_board" do %>
-  <%= render "shared/flash" %>
-  <%= form_with(model: [current_user, board]) do |form| %>
-    <% if board.errors.any? %>
-      <div style="color: red">
-        <h2><%= pluralize(board.errors.count, "error") %> prohibited this board from being saved:</h2>
+<% if cancel_form %>
+  <%= turbo_frame_tag "new_board" %>
+<% else %>
+  <%= turbo_frame_tag "new_board" do %>
+    <%= render "shared/flash" %>
+    <%= form_with(model: [current_user, board]) do |form| %>
+      <% if board.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(board.errors.count, "error") %> prohibited this board from being saved:</h2>
 
-        <ul>
-          <% board.errors.each do |error| %>
-            <li><%= error.full_message %></li>
+          <ul>
+            <% board.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <% if defined?(pin_id) && pin_id != nil %>
+        <%= hidden_field_tag :pin_id, pin_id %>
+        <%# pin_id is for the case of createing new board in "save pin process" %>
+      <% end %>
+      
+      <div>
+        <%= form.label :cover, "Upload Cover",  style: "display: block"  %>
+        <%= form.file_field :cover %>
+      </div>
+
+      <div>
+        <%= form.label :name, style: "display: block" %>
+        <%= form.text_field :name %>
+      </div>
+
+      <div>
+        <%= form.label :description, style: "display: block" %>
+        <%= form.text_area :description %>
+      </div>
+
+      <div>
+        <%= form.label :keep_secret, style: "display: block" %>
+        <%= form.check_box :keep_secret %>
+      </div>
+
+      <% if defined?(pin_id) && pin_id != nil %>
+        <div>
+          <%= form.submit  %>
+          <% if in_saved_pin_mode %>
+            <%= link_to "Cancel", new_user_board_path(current_user, cancel_form: true) %>
           <% end %>
-        </ul>
-      </div>
-    <% end %>
+        </div>
+      <% end %>
 
-    <% if defined?(pin_id) && pin_id != nil %>
-      <%= hidden_field_tag :pin_id, pin_id %>
-      <%# pin_id is for the case of createing new board in "save pin process" %>
-    <% end %>
-    
-    <div>
-      <%= form.label :cover, "Upload Cover",  style: "display: block"  %>
-      <%= form.file_field :cover %>
-    </div>
-
-    <div>
-      <%= form.label :name, style: "display: block" %>
-      <%= form.text_field :name %>
-    </div>
-
-    <div>
-      <%= form.label :description, style: "display: block" %>
-      <%= form.text_area :description %>
-    </div>
-
-    <div>
-      <%= form.label :keep_secret, style: "display: block" %>
-      <%= form.check_box :keep_secret %>
-    </div>
-
-    <% if defined?(pin_id) && pin_id != nil %>
-      <div>
-        <%= form.submit  %>
-      </div>
-    <% end %>
-
-    <% if pin_id == nil %>
-      <div>
-        <%= form.submit "Submit", data: { turbo_frame: "_top" } %>
-      </div>
+      <% if pin_id == nil %>
+        <div>
+          <%= form.submit "Submit", data: { turbo_frame: "_top" } %>
+          <% if in_saved_pin_mode %>
+            <%= link_to "Cancel", new_user_board_path(current_user, cancel_form: true) %>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
