--- a/app/views/saved_pins/new.html.erb
+++ b/app/views/saved_pins/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New saved pin</h1>
-
-<%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
-  <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
+<% if @cancel_form %>
+  <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") %>
+<% else %>
+  <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
+    <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
+  <% end %>
 <% end %>
