--- a/app/views/pins/_edit_form.html.erb
+++ b/app/views/pins/_edit_form.html.erb
@@ -33,5 +33,8 @@
 
   <div>
     <%= form.submit %>
+    <% if in_frame_mode %>
+      <%= link_to "Cancel", edit_pin_path(pin, cancel_form: true) %>
+    <% end %>
   </div>
 <% end %>
