--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,9 +1,12 @@
 <div class="middle-container">
   <div>
     <h1>Editing pin</h1>
-  
-    <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] do %>
-      <%= render "edit_form", pin: @pin %>
+    <% if @cancel_form %>
+      <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] %>
+    <% else %>
+      <%= turbo_frame_tag [dom_id(@pin), "edit_layout"] do %>
+        <%= render partial: "pins/edit_form", locals: {pin: @pin, in_frame_mode: @in_frame_mode} %>
+      <% end %>
     <% end %>
   
     <br>
