User can cancel Edit saved_pin_form in turbo frame

--- a/app/views/saved_pins/_edit_saved_pin.html.erb
+++ b/app/views/saved_pins/_edit_saved_pin.html.erb
@@ -15,6 +15,7 @@
 
   <div>
     <%= form.submit "Save" %>
+    <%= link_to "Cancel", edit_pin_saved_pin_path(pin, saved_pin, cancel_form:true) %>
   </div>
 <% end %>
 <%= button_to "Delete", pin_saved_pin_path(pin, saved_pin), method: :delete %>
