--- a/app/views/saved_pins/edit.html.erb
+++ b/app/views/saved_pins/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Edit Saved Pin</h1>
 
-<%= turbo_frame_tag("edit#{dom_id(@saved_pin)}") do %>
-  <%= render partial: "saved_pins/edit_saved_pin", locals: {pin: @pin, saved_pin: @saved_pin} %>
+<% if @cancel_form %>
+  <%= turbo_frame_tag("edit#{dom_id(@saved_pin)}") %>
+<% else %>
+  <%= turbo_frame_tag("edit#{dom_id(@saved_pin)}") do %>
+    <%= render partial: "saved_pins/edit_saved_pin", locals: {pin: @pin, saved_pin: @saved_pin} %>
+  <% end %>
 <% end %>
 
