--- a/app/views/saved_pins/new.html.erb
+++ b/app/views/saved_pins/new.html.erb
@@ -2,6 +2,10 @@
   <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") %>
 <% else %>
   <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
-    <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
+    <div class="modal" data-controller="close-form" data-close-form-target="container" >
+      <div class="modal-content">
+        <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
+      </div>
+    </div>
   <% end %>
 <% end %>
