User can use img url to create pin

--- a/app/views/pins/_edit_form.html.erb
+++ b/app/views/pins/_edit_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div>
+    <%= form.label :image_url, "Image URL: (prefered over uploaded Image)", style: "display: block" %>
+    <%= form.text_field :image_url %>
+  </div>
+
+  <div>
     <%= form.label :title, style: "display: block" %>
     <%= form.text_field :title %>
   </div>
