Fix board show for non-owner user

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -6,6 +6,8 @@
   <p>
     <div><strong>Name: <%= board.name %></strong></div>
     <div><strong>Description:</strong> <%= board.description %></div>
-    <div><%= render partial: "boards/privacy_change", locals: { board: board } %></div>
+    <% if current_user == @board.user %>
+      <div><%= render partial: "boards/privacy_change", locals: { board: board } %></div>
+    <% end %>
   </p>
 </div>
