Fix bug user can not edit saved_pin of other

--- a/app/views/shared/_pin.html.erb
+++ b/app/views/shared/_pin.html.erb
@@ -25,14 +25,14 @@
             <%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} %>
           <% end %>
 
-          <% if defined?(saved_pin) %>
+          <% if defined?(saved_pin) && pin.user == current_user  %>
             <%= render partial: "shared/edit_saved_pin_layout", locals: {pin: pin, saved_pin: saved_pin} %>
           <% end %>
         <% end %>
     
       </div>
     <% end %>
-    <% if defined?(edit_pin) && edit_pin %>
+    <% if defined?(edit_pin) && edit_pin && pin.user == current_user %>
         <%= render partial: "shared/edit_pin_layout", locals: {pin: pin} %>
     <% end %>
   </div>
