--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div>
-    <%= form.label :content, style: "display: block" %>
+    <%= form.label :content, "Note content", style: "display: block" %>
     <%= form.text_area :content %>
   </div>
 
