Allow user to use url as board cover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,6 +49,11 @@ img {
   max-width: 100%;
   border-radius: 15px;
 }
+.board-cover {
+  border-radius: 15px;
+  height: 157px;
+  width: 157px;
+}
 .img_place_holder{
   border-radius: 15px;
   height: 157px;
