--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -22,6 +22,11 @@
         </div>
 
         <div>
+          <%= form.label :cover_url, "Cover URL (recommended over uploaded cover)",  style: "display: block"  %>
+          <%= form.text_field :cover_url %>
+        </div>
+
+        <div>
           <%= form.label :name, style: "display: block" %>
           <%= form.text_field :name %>
         </div>
