--- a/app/views/shared/_user_avatar.html.erb
+++ b/app/views/shared/_user_avatar.html.erb
@@ -1,4 +1,6 @@
-<% if user.profile.avatar.present? %>
+<% if user.profile.avatar_url.present? %>
+  <div class="circular-image" style="width: <%=size%>px; height: <%=size%>px"><%= image_tag(user.profile.avatar_url, style: "width: #{size}px; height: #{size}px; object-fit: contain;" ) %></div>
+<% elsif user.profile.avatar.present? %>
   <div class="circular-image" style="width: <%=size%>px; height: <%=size%>px"><%= image_tag(user.resize_fill_img(user.profile.avatar, size, size)) %></div>
 <% else %>
   <div class="circular-image" style="width: <%=size%>px; height: <%=size%>px"><%= user.email[0].upcase %></div>
